@@ -405,6 +405,38 @@
      <number>-1</number>
     </property>
    </widget>
+   <widget class="QLabel" name="jumper1Label">
+    <property name="geometry">
+     <rect>
+      <x>123</x>
+      <y>127</y>
+      <width>31</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="pifacedigital_emulator.qrc">:/images/pi_jumper.png</pixmap>
+    </property>
+   </widget>
+   <widget class="QLabel" name="jumper2Label">
+    <property name="geometry">
+     <rect>
+      <x>151</x>
+      <y>133</y>
+      <width>31</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="pifacedigital_emulator.qrc">:/images/pi_jumper.png</pixmap>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -412,7 +444,7 @@
      <x>0</x>
      <y>0</y>
      <width>322</width>
-     <height>23</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuEnable">
@@ -423,7 +455,17 @@
     <addaction name="separator"/>
     <addaction name="inputPullupsAction"/>
    </widget>
+   <widget class="QMenu" name="menuBoard">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="board0Action"/>
+    <addaction name="board1Action"/>
+    <addaction name="board2Action"/>
+    <addaction name="board3Action"/>
+   </widget>
    <addaction name="menuEnable"/>
+   <addaction name="menuBoard"/>
   </widget>
   <action name="actionSPI_Visualiser">
    <property name="text">
@@ -447,6 +489,41 @@
    </property>
    <property name="text">
     <string>Input Pullups</string>
+   </property>
+  </action>
+  <action name="board0Action">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Board 0</string>
+   </property>
+  </action>
+  <action name="board1Action">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Board 1</string>
+   </property>
+  </action>
+  <action name="board2Action">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Board 2</string>
+   </property>
+  </action>
+  <action name="board3Action">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Board 3</string>
    </property>
   </action>
  </widget>
